# btk

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .src2mdignore  404.html  CITATION.cff  CLAUDE.md  DEPLOYMENT_SUCCESS.md  Makefile  README.md  RELEASE_NOTES_v0.7.1.md  TEST_SUITE_SUCCESS.md  blog_post_vfs_cli_tools.md  btk.cast  btk.db  btk.py  index.html  llm-instructions.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sitemap.xml  src2md-btk.md  test_new_plugins.py  test_scheduler.py  utils.py  viewer.html
.github/workflows/: ci.yml  scheduled-tests.yml  tests.yml
PLUGIN_ARCHITECTURE/: index.html
advanced/browser/: index.html
advanced/database/: index.html
advanced/performance/: index.html
advanced/plugins/: index.html
api/cli/: index.html
api/python/: index.html
bookmark_memex/: __init__.py  cli.py  config.py  db.py  fts.py  mcp.py  models.py  soft_delete.py  uri.py
bookmark_memex/content/: __init__.py  extractor.py  fetcher.py
bookmark_memex/detectors/: __init__.py  arxiv.py  github.py  youtube.py
bookmark_memex/exporters/: __init__.py  arkiv.py  formats.py  html_app.py
bookmark_memex/importers/: __init__.py  arkiv.py  browser.py  browser_history.py  file_importers.py
btk/: __init__.py  archiver.py  auto_tag.py  browser_import.py  bulk_ops.py  cleanup.py  cli.py  collections.py  config.py  constants.py  content_cache.py  content_extractor.py  content_fetcher.py  db.py  dedup.py  exporters.py  fts.py  graph.py  health.py  health_checker.py  importers.py  llm-instructions.md  llm.py  mcp.py  media_detector.py  media_fetcher.py  merge.py  models.py  plugins.py  preservation.py  progress.py  reading_queue.py  repl.py  repl_commands.py  serve.py  shell.py  stream.py  tag_utils.py  tools.py  utils.py
btk/html_app/: __init__.py  builder.py  template.py
btk/importers/: __init__.py  base.py  file_importers.py  youtube.py
btk/migrations/: add_archived_pinned.py  add_events_table.py  (+2 more)
dev/: TabCloud.html  cloud2.html  cloud3.html  data.json
development/: index.html
docs/: PLUGIN_ARCHITECTURE.md  index.md
integrations/: README.md  btk.db
search/: search_index.json
site/: 404.html  sitemap.xml
specs/: 2026-04-20-history-capture.md
tests/: __init__.py  conftest.py  test_archiver.py  test_bm_arkiv_history.py  test_bm_arkiv_history_roundtrip.py  test_bm_browser_import.py  test_bm_cli.py  test_bm_config.py  test_bm_content.py  test_bm_db.py  test_bm_detectors.py  test_bm_exporters.py  test_bm_fts.py  test_bm_history_import.py  test_bm_html_app.py  test_bm_importers.py  test_bm_importers_arkiv.py  test_bm_mcp.py  test_bm_migrations.py  test_bm_models.py  test_browser_import.py  test_bulk_ops.py  test_cli.py  test_cli_hierarchical_export.py  test_collections.py  test_config.py  test_content_cache.py  test_content_extractor.py  test_content_fetcher.py  test_data_model.py  test_date_features.py  test_db.py  test_dedup.py  test_directory_import.py  test_exporters.py  test_fts.py  test_graph.py  test_health_checker.py  test_hierarchical_export.py  test_html_app.py  (+25 more)
(+157 files in other folders)
