[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookmark-tk"
version = "0.7.2"
description = "Bookmark Toolkit. Helps manage, analyze, and visualize bookmarks"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Alex Towell", email = "lex@metafunctor.com"}
]
dependencies = [
    "bs4",
    "requests",
    "colorama",
    "rich",
    "networkx",
    "matplotlib",
    "pyvis",
    "tqdm",
    "jmespath"
]

[project.scripts]
btk = "btk.cli:main"  # CLI entry point

[tool.setuptools]
packages = ["btk"]  # Ensure it finds your package

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true