[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookmark-memex"
version = "0.1.0"
description = "Personal bookmark archive with MCP server, FTS5 search, and content caching"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Alex Towell", email = "lex@metafunctor.com"}
]
dependencies = [
    "sqlalchemy>=2.0",
    "beautifulsoup4",
    "requests",
    "rich",
    "pyyaml",
    "jinja2",
    "markdownify",
]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0", "aiosqlite>=0.20"]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
bookmark-memex = "bookmark_memex.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bookmark_memex", "bookmark_memex.*"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
